--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 /* You can add global styles to this file, and also import other style files */
 @import "node_modules/bootstrap/scss/bootstrap.scss";
 /* Importing Bootstrap SCSS file. */
