--- a/src/app/components/menu/page-not-found/page-not-found.component.scss
+++ b/src/app/components/menu/page-not-found/page-not-found.component.scss
@@ -56,6 +56,7 @@ fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, 
 
 .top-header:before {
     background-image: url(https://1.bp.blogspot.com/-gxsOcYWghHA/Xp_izTh4sFI/AAAAAAAAU8s/y637Fwg99qAuzW9na_NT_uApny8Vce95gCEwYBhgL/s1600/header-footer-gradient-bg.png);
+    background-color: #2a3992;
 }
 .top-header:before {
     content: '';
@@ -247,7 +248,7 @@ button {
 .e-nav__link {
   height: 45px;
   line-height: 45px;
-  width: 170px;
+  width: 180px;
   display: inline-block;
   vertical-align: top;
   margin: 0 15px;
@@ -284,7 +285,7 @@ button {
 }
 
 .e-nav__link:after {
-  content: "Home Page";
+  content: "Домашняя страница";
 }
 
 .e-nav__link:hover:before {
