--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,11 +10,9 @@
     />
   </head>
   <body>
-    <div style="float:  left;">
+    <div class="d-flex flex-nowrap">
       <app-sidebar></app-sidebar>
-      <div class="max-w-fit dcontainer mx-auto pt-1 mt-[10px]">
         <router-outlet></router-outlet>
-      </div>
     </div>
   </body>
 </html>
