--- a/src/app/components/forms/resource/resource-overview/resource-overview.component.html
+++ b/src/app/components/forms/resource/resource-overview/resource-overview.component.html
@@ -1,1 +1,118 @@
-<p>resource-overview works!</p>
+<h1>Список ресурсов</h1>
+<div>
+  <td>
+    <app-switch
+      (buttonClick)="onAdd()"
+      style="margin-bottom: 50px"
+    ></app-switch>
+  </td>
+  <td>
+    <input
+      type="button"
+      value="Добавить"
+      class="btn btn-default"
+      (click)="addResource()"
+    />
+  </td>
+</div>
+<div
+  class="table-responsive"
+  style="max-width: 1100px; min-width: 1000px; overflow-x: auto"
+>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <td>Id</td>
+        <td>Название</td>
+        <td>Кол-во</td>
+        <td></td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let resource of resources">
+        <ng-template
+          [ngTemplateOutlet]="loadTemplate(resource)"
+          [ngTemplateOutletContext]="{ $implicit: resource }"
+        >
+        </ng-template>
+      </tr>
+    </tbody>
+  </table>
+  <div>{{ statusMessage }}</div>
+</div>
+
+<!--шаблон для чтения-->
+<ng-template #readOnlyTemplate let-resource>
+  <td>{{ resource.id }}</td>
+  <td>{{ resource.resourceName }}</td>
+  <td style="text-align: right">{{ resource.amount }}</td>
+  <td style="text-transform: lowercase">{{ resource.dimension }}</td>
+  <td>
+    <input
+      type="button"
+      value="Изменить"
+      class="btn btn-default"
+      (click)="editResource(resource)"
+      style="max-width: 120px"
+    />
+  </td>
+  <td>
+    <input
+      type="button"
+      value="Удалить"
+      (click)="deleteResource(resource)"
+      class="btn btn-danger"
+      style="max-width: 120px"
+    />
+  </td>
+</ng-template>
+
+<!--шаблон для редактирования-->
+<ng-template #editTemplate>
+  <td>
+    <input
+      type="number"
+      [(ngModel)]="editedResource.id"
+      readonly
+      disabled
+      class="form-control"
+    />
+  </td>
+  <td>
+    <input
+      type="text"
+      [(ngModel)]="editedResource.resourceName"
+      class="form-control"
+    />
+  </td>
+  <td>
+    <input
+      type="number"
+      [(ngModel)]="editedResource.amount"
+      class="form-control"
+    />
+  </td>
+  <td>
+    <input
+      type="text"
+      [(ngModel)]="editedResource.dimension"
+      class="form-control"
+    />
+  </td>
+  <td>
+    <input
+      type="button"
+      value="Сохранить"
+      (click)="saveResource()"
+      class="btn btn-success"
+    />
+  </td>
+  <td>
+    <input
+      type="button"
+      value="Отмена"
+      (click)="cancel()"
+      class="btn btn-warning"
+    />
+  </td>
+</ng-template>
