--- a/src/app/components/menu/sidebar/sidebar.component.html
+++ b/src/app/components/menu/sidebar/sidebar.component.html
@@ -97,14 +97,14 @@
       class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark"
       style="width: 280px"
     >
-      <h3 > Ваши кандитерские</h3>
+      <h3 > Ваши кондитерские</h3>
       <hr />
       <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
           <a routerLink="home" (mouseenter)="mouseInHome()" (mouseleave)="mouseOutHome()" id="homeComponId" routerLinkActive="active" class="{{homeActive}}" aria-current="page"> Домашняя страница </a>
         </li>
         <li>
-          <a routerLink="candyShop" (mouseenter)="mouseInShop()" (mouseleave)="mouseOutShop()" id="shopComponId" routerLinkActive="active" class="{{candyShopActive}}"> Кандитерская </a>
+          <a routerLink="candyShop" (mouseenter)="mouseInShop()" (mouseleave)="mouseOutShop()" id="shopComponId" routerLinkActive="active" class="{{candyShopActive}}"> кондитерская </a>
         </li>
         <li>
           <a routerLink="flowSheet" (mouseenter)="mouseInFlowSheet()" (mouseleave)="mouseOutFlowSheet()" id="sheetComponId" routerLinkActive="active" class="{{flowSheetActive}}"> Рецепты </a>
