--- a/src/app/components/forms/purchase/purchase-overview/purchase-overview.component.html
+++ b/src/app/components/forms/purchase/purchase-overview/purchase-overview.component.html
@@ -24,8 +24,7 @@
       <tr>
         <td>Id</td>
         <td>Название</td>
-        <td>Кол-во</td>
-        <td></td>
+        <td style="text-align: right">Кол-во</td>
       </tr>
     </thead>
     <tbody>
@@ -90,6 +89,7 @@
       type="number"
       [(ngModel)]="editedPurchase.amount"
       class="form-control"
+      style="text-align: right"
     />
   </td>
   <td>
