--- a/src/app/components/forms/resource/resource-overview/resource-overview.component.html
+++ b/src/app/components/forms/resource/resource-overview/resource-overview.component.html
@@ -24,7 +24,7 @@
       <tr>
         <td>Id</td>
         <td>Название</td>
-        <td>Кол-во</td>
+        <td style="text-align: right">Кол-во</td>
         <td></td>
       </tr>
     </thead>
@@ -90,6 +90,7 @@
       type="number"
       [(ngModel)]="editedResource.amount"
       class="form-control"
+      style="text-align: right"
     />
   </td>
   <td>
