--- a/src/app/components/forms/ingredient/ingredient-overview/ingredient-overview.component.html
+++ b/src/app/components/forms/ingredient/ingredient-overview/ingredient-overview.component.html
@@ -1,1 +1,118 @@
-<p>ingredient-overview works!</p>
+<h1>Список ингредиентов</h1>
+<div>
+  <td>
+    <app-switch
+      (buttonClick)="onAdd()"
+      style="margin-bottom: 50px"
+    ></app-switch>
+  </td>
+  <td>
+    <input
+      type="button"
+      value="Добавить"
+      class="btn btn-default"
+      (click)="addIngredient()"
+    />
+  </td>
+</div>
+<div
+  class="table-responsive"
+  style="max-width: 1100px; min-width: 1000px; overflow-x: auto"
+>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <td>Id</td>
+        <td>Название</td>
+        <td style="text-align: right">Кол-во</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let ingredient of ingredients">
+        <ng-template
+          [ngTemplateOutlet]="loadTemplate(ingredient)"
+          [ngTemplateOutletContext]="{ $implicit: ingredient }"
+        >
+        </ng-template>
+      </tr>
+    </tbody>
+  </table>
+  <div>{{ statusMessage }}</div>
+</div>
+
+<!--шаблон для чтения-->
+<ng-template #readOnlyTemplate let-ingredient>
+  <td>{{ ingredient.id }}</td>
+  <td style="text-align: right">{{ ingredient.amount }}</td>
+  <td style="text-transform: lowercase">{{ ingredient.dimension }}</td>
+  <td>{{ ingredient.ingredientName }}</td>
+  <td>
+    <input
+      type="button"
+      value="Изменить"
+      class="btn btn-default"
+      (click)="editIngredient(ingredient)"
+      style="max-width: 120px"
+    />
+  </td>
+  <td>
+    <input
+      type="button"
+      value="Удалить"
+      (click)="deleteIngredient(ingredient)"
+      class="btn btn-danger"
+      style="max-width: 120px"
+    />
+  </td>
+</ng-template>
+
+<!--шаблон для редактирования-->
+<ng-template #editTemplate>
+  <td>
+    <input
+      type="number"
+      [(ngModel)]="editedIngredient.id"
+      readonly
+      disabled
+      class="form-control"
+    />
+  </td>
+  <td>
+    <input
+      type="text"
+      [(ngModel)]="editedIngredient.amount"
+      class="form-control"
+    />
+  </td>
+  <td>
+    <input
+      type="number"
+      [(ngModel)]="editedIngredient.dimension"
+      class="form-control"
+      style="text-align: right"
+    />
+  </td>
+  <td>
+    <input
+      type="text"
+      [(ngModel)]="editedIngredient.ingredientName"
+      class="form-control"
+    />
+  </td>
+  <td>
+    <input
+      type="button"
+      value="Сохранить"
+      (click)="saveIngredient()"
+      class="btn btn-success"
+    />
+  </td>
+  <td>
+    <input
+      type="button"
+      value="Отмена"
+      (click)="cancel()"
+      class="btn btn-warning"
+    />
+  </td>
+</ng-template>
