--- a/src/app/components/menu/sidebar/sidebar.component.html
+++ b/src/app/components/menu/sidebar/sidebar.component.html
@@ -104,7 +104,7 @@
           <a routerLink="home" (mouseenter)="mouseInHome()" (mouseleave)="mouseOutHome()" id="homeComponId" routerLinkActive="active" class="{{homeActive}}" aria-current="page"> Домашняя страница </a>
         </li>
         <li>
-          <a routerLink="candyShop" (mouseenter)="mouseInShop()" (mouseleave)="mouseOutShop()" id="shopComponId" routerLinkActive="active" class="{{candyShopActive}}"> кондитерская </a>
+          <a routerLink="candyShop" (mouseenter)="mouseInShop()" (mouseleave)="mouseOutShop()" id="shopComponId" routerLinkActive="active" class="{{candyShopActive}}"> Кондитерские </a>
         </li>
         <li>
           <a routerLink="flowSheet" (mouseenter)="mouseInFlowSheet()" (mouseleave)="mouseOutFlowSheet()" id="sheetComponId" routerLinkActive="active" class="{{flowSheetActive}}"> Рецепты </a>
