--- a/src/app/components/menu/switch/switch.component.html
+++ b/src/app/components/menu/switch/switch.component.html
@@ -1,6 +1,6 @@
 <h4>все/{{ shopName }}</h4>
 <!-- Rounded switch -->
 <label class="switch">
-  <input type="checkbox"/>
+  <input type="checkbox" [(ngModel)]="oooN"/>
   <span class="slider round" (click)="add()"></span>
 </label>
