--- a/src/app/components/forms/flowSheet/flow-sheet-overview/flow-sheet-overview.component.html
+++ b/src/app/components/forms/flowSheet/flow-sheet-overview/flow-sheet-overview.component.html
@@ -1,1 +1,110 @@
-<p>flow-sheet-overview works!</p>
+<h1>Список рецептов</h1>
+<div>
+  <td>
+    <app-switch
+      (buttonClick)="onAdd()"
+      style="margin-bottom: 50px"
+    ></app-switch>
+  </td>
+  <td>
+    <input
+      type="button"
+      value="Добавить"
+      class="btn btn-default"
+      (click)="addFlowSheet()"
+    />
+  </td>
+</div>
+<div
+  class="table-responsive"
+  style="max-width: 1100px; min-width: 1000px; overflow-x: auto"
+>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <td>Id</td>
+        <td>Название</td>
+        <td>Ингредиенты</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let flowSheet of flowSheets">
+        <ng-template
+          [ngTemplateOutlet]="loadTemplate(flowSheet)"
+          [ngTemplateOutletContext]="{ $implicit: flowSheet }"
+        >
+        </ng-template>
+      </tr>
+    </tbody>
+  </table>
+  <div>{{ statusMessage }}</div>
+</div>
+
+<!--шаблон для чтения-->
+<ng-template #readOnlyTemplate let-flowSheet>
+  <td>{{ flowSheet.id }}</td>
+  <td>{{ flowSheet.confectioneryName }}</td>
+  <td>{{ flowSheet.ingredients }}</td>
+  <td>
+    <input
+      type="button"
+      value="Изменить"
+      class="btn btn-default"
+      (click)="editFlowSheet(flowSheet)"
+      style="max-width: 120px"
+    />
+  </td>
+  <td>
+    <input
+      type="button"
+      value="Удалить"
+      (click)="deleteFlowSheet(flowSheet)"
+      class="btn btn-danger"
+      style="max-width: 120px"
+    />
+  </td>
+</ng-template>
+
+<!--шаблон для редактирования-->
+<ng-template #editTemplate>
+  <td>
+    <input
+      type="number"
+      [(ngModel)]="editedFlowSheet.id"
+      readonly
+      disabled
+      class="form-control"
+    />
+  </td>
+  <td>
+    <input
+      type="text"
+      [(ngModel)]="editedFlowSheet.confectioneryName"
+      class="form-control"
+    />
+  </td>
+  <td>
+    <input
+      type="number"
+      [(ngModel)]="editedFlowSheet.ingredients"
+      class="form-control"
+      style="text-align: right"
+    />
+  </td>
+  <td>
+    <input
+      type="button"
+      value="Сохранить"
+      (click)="saveFlowSheet()"
+      class="btn btn-success"
+    />
+  </td>
+  <td>
+    <input
+      type="button"
+      value="Отмена"
+      (click)="cancel()"
+      class="btn btn-warning"
+    />
+  </td>
+</ng-template>
