--- a/src/app/components/forms/orderedConfectionery/ordered-confectionery-overview/ordered-confectionery-overview.component.html
+++ b/src/app/components/forms/orderedConfectionery/ordered-confectionery-overview/ordered-confectionery-overview.component.html
@@ -1,1 +1,104 @@
-<p>ordered-confectionery-overview works!</p>
+<h1>Список закупок</h1>
+<div>
+  <td>
+    <input
+      type="button"
+      value="Добавить"
+      class="btn btn-default"
+      (click)="addOrderedConfectionery()"
+    />
+  </td>
+</div>
+<div
+  class="table-responsive"
+  style="max-width: 1100px; min-width: 1000px; overflow-x: auto"
+>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <td>Id</td>
+        <td>Название</td>
+        <td>Кол-во (шт.)</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let orderedConfectionery of orderedConfectionerys">
+        <ng-template
+          [ngTemplateOutlet]="loadTemplate(orderedConfectionery)"
+          [ngTemplateOutletContext]="{ $implicit: orderedConfectionery }"
+        >
+        </ng-template>
+      </tr>
+    </tbody>
+  </table>
+  <div>{{ statusMessage }}</div>
+</div>
+
+<!--шаблон для чтения-->
+<ng-template #readOnlyTemplate let-orderedConfectionery>
+  <td>{{ orderedConfectionery.id }}</td>
+  <td>{{ orderedConfectionery.confectioneryName }}</td>
+  <td>{{ orderedConfectionery.number }}</td>
+  <td>
+    <input
+      type="button"
+      value="Изменить"
+      class="btn btn-default"
+      (click)="editOrderedConfectionery(orderedConfectionery)"
+      style="max-width: 120px"
+    />
+  </td>
+  <td>
+    <input
+      type="button"
+      value="Удалить"
+      (click)="deleteOrderedConfectionery(orderedConfectionery)"
+      class="btn btn-danger"
+      style="max-width: 120px"
+    />
+  </td>
+</ng-template>
+
+<!--шаблон для редактирования-->
+<ng-template #editTemplate>
+  <td>
+    <input
+      type="number"
+      [(ngModel)]="editedOrderedConfectionery.id"
+      readonly
+      disabled
+      class="form-control"
+    />
+  </td>
+  <td>
+    <input
+      type="text"
+      [(ngModel)]="editedOrderedConfectionery.confectioneryName"
+      class="form-control"
+    />
+  </td>
+  <td>
+    <input
+      type="number"
+      [(ngModel)]="editedOrderedConfectionery.number"
+      class="form-control"
+      style="text-align: right"
+    />
+  </td>
+  <td>
+    <input
+      type="button"
+      value="Сохранить"
+      (click)="saveOrderedConfectionery()"
+      class="btn btn-success"
+    />
+  </td>
+  <td>
+    <input
+      type="button"
+      value="Отмена"
+      (click)="cancel()"
+      class="btn btn-warning"
+    />
+  </td>
+</ng-template>
