--- a/src/app/components/forms/orderedConfectionery/ordered-confectionery-overview/ordered-confectionery-overview.component.html
+++ b/src/app/components/forms/orderedConfectionery/ordered-confectionery-overview/ordered-confectionery-overview.component.html
@@ -35,10 +35,10 @@
   
   <td>
     <input
+      routerLink="/orders"
       type="button"
-      value="Сохранить"
-      (click)="saveOrderedConfectionery()"
-      class="btn btn-success"
+      value="Вернуться"
+      class="btn btn-warning"
     />
   </td>
 </div>
