--- a/src/app/components/forms/orders/orders-overview/orders-overview.component.html
+++ b/src/app/components/forms/orders/orders-overview/orders-overview.component.html
@@ -67,7 +67,7 @@
     ></label>
   </td>
   <td>
-    <table class="table table-striped">
+    <table class="table table-bordered">
       <thead>
         <tr>
           <td>Id</td>
@@ -76,7 +76,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let orderedConfectionery of orders.orderedConfectionerys">
+        <tr *ngFor="let orderedConfectionery of orders.orderedConfectioneries">
           <td>{{ orderedConfectionery.id }}</td>
           <td>{{ orderedConfectionery.confectioneryName }}</td>
           <td>{{ orderedConfectionery.number }}</td>
@@ -120,8 +120,6 @@
     <input
       type="number"
       [(ngModel)]="editedOrders.orderNumber"
-      readonly
-      disabled
       class="form-control"
     />
   </td>
